Fix mute shortcode not rendering KaTeX

--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -124,8 +124,8 @@ Deze berekening heeft drie termen:
 | $-3{,}\orange{35}$ | 2                          |
 
 Het kleinste aantal cijfers na de komma is dus 1. Dat betekent dat we de
-**uitkomst moeten afronden tot op 1 cijfer na de komma** <Mute text="(afronden
-op de tienden dus)" />. De uitkomst van de berekening zelf is:
+**uitkomst moeten afronden tot op 1 cijfer na de komma** <Mute>(afronden
+op de tienden dus)</Mute>. De uitkomst van de berekening zelf is:
 
 
 $$
@@ -171,8 +171,8 @@ $$
 
 
 Deze uitkomst moeten we afronden zodat enkel de eerste 2 beduidende cijfers
-overblijven <Mute text="($7$ en $6$)" />. We moeten dus afronden op de
-duizendsten <Mute text="(3 plaatsen na de komma)" />:
+overblijven <Mute>($7$ en $6$)</Mute>. We moeten dus afronden op de
+duizendsten <Mute>(3 plaatsen na de komma)</Mute>:
 
 
 $$
