--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -153,7 +153,7 @@ $$
 <Attention title="Omzetten van een macht van 10">
 
 Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot
-\blue{10^c}$ <Mute text="(met $a, b, c \in \mathbb{R}$)" />:
+\blue{10^c}$ <Mute>(met $a, b, c \in \mathbb{R}$)</Mute>:
 
 Vermenigvuldig $a \cdot 10^b$ met
 <span class="blue">$10^{c}$ om de juiste macht van 10 te hebben</span> en met
