--- a/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
@@ -22,19 +22,19 @@ grootheid** is.
 ## Kracht is een vectoriële grootheid
 
 Als je wilt weten wat er met een slee gebeurt als iemand eraan trekt, moet je
-niet alleen weten **hoe hard** <Mute text="(= grootte)" />, maar ook 
-**waarheen** <Mute text="(= richting en zin)" /> er aan de slee getrokken 
+niet alleen weten **hoe hard** <Mute>(= grootte)</Mute>, maar ook 
+**waarheen** <Mute>(= richting en zin)</Mute> er aan de slee getrokken 
 wordt.
 
 ![](img/krachtvector.png)
 
-Bij een kracht hoort dus zowel een **grootte** <Mute text="(hoe hard je trekt
-of duwt)" /> als een **richting** en **zin** <Mute text="(waarheen je trekt of
-duwt)" />. Daarom is kracht een [vectoriële
+Bij een kracht hoort dus zowel een **grootte** <Mute>(hoe hard je trekt
+of duwt)</Mute> als een **richting** en **zin** <Mute>(waarheen je trekt of
+duwt)</Mute>. Daarom is kracht een [vectoriële
 grootheid](/lessen/wiskunde/vector_1/vectoriele_grootheden). In symbolen noteren we een **krachtvector** als een _F_ met een
 pijltje boven: $\vec{F}$.
 
-Voor de duidelijkheid gaan we bij krachten soms in de _index_ <Mute text="(rechts onderaan)" /> aangeven wie of wat de kracht levert en op wie of wat de kracht aangrijpt.
+Voor de duidelijkheid gaan we bij krachten soms in de _index_ <Mute>(rechts onderaan)</Mute> aangeven wie of wat de kracht levert en op wie of wat de kracht aangrijpt.
 
 | Schrijf        | Lees                               |
 | -------------- | ---------------------------------- |
@@ -49,8 +49,8 @@ Wanneer Dirk tegen Maria duwt, bijvoorbeeld, zouden we de **kracht van Dirk op M
 
 De **grootte** van een krachtvector $\vec{F}$ zegt **hoeveel kracht** er wordt
 uitgeoefend, dus hoeveel newton. De grootte van een kracht is **altijd positief**. We noteren de
-grootte van $\vec{F}$ als $\norm{\vec{F}}$ of als $F$ <Mute text="(merk op:
-geen pijltje op de $F$)" />.
+grootte van $\vec{F}$ als $\norm{\vec{F}}$ of als $F$ <Mute>(merk op:
+geen pijltje op de $F$)</Mute>.
 
 | Schrijf          | Lees                     |
 | ---------------- | ------------------------ |
