--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -48,7 +48,7 @@ zelfs twee normaalkrachten. Voor ieder hand één.
 ## Normaalkracht altijd loodrecht op steunoppervlak
 
 De normaalkracht is _"normaal"_ omdat ze altijd loodrecht op het steunoppervlak
-staat <Mute text="(normaal is een ander woord voor loodrecht)" />. Ook
+staat <Mute>(normaal is een ander woord voor loodrecht)</Mute>. Ook
 wanneer het steunoppervlak schuin staat, staat de normaalkracht er loodrecht op.
 
 ![Normaalkacht is altijd loodrecht op het steunoppervlak](img/normaalkracht_loodrecht.png)
