--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -29,9 +29,9 @@ zullen we eerst eens bekijken waarom snelheid juist een vector is.
 We leerden in een [eerdere les](krachtvector) al dat kracht een
 vectoriële grootheid is. Dat betekent dat een kracht een **grootte, richting en
 zin** heeft. Net als kracht, is **snelheid ook een vectoriële grootheid**. Zo
-is het niet alleen belangrijk hoe snel je rijdt <Mute text="(= grootte van de
-vector)" />, maar ook waar je naartoe rijdt <Mute text="(= richting en zin van
-de vector)" />. We schrijven de snelheidsvector als $\vec{v}$.
+is het niet alleen belangrijk hoe snel je rijdt <Mute>(= grootte van de
+vector)</Mute>, maar ook waar je naartoe rijdt <Mute>(= richting en zin van
+de vector)</Mute>. We schrijven de snelheidsvector als $\vec{v}$.
 
 ![](img/snelheidsvector.png)
 
@@ -62,11 +62,11 @@ snelheidsverandering te bespreken.
 
 Wanneer de snelheid vergroot of verkleint, verandert de **grootte** van de
 snelheidsvector. Wanneer je bijvoorbeeld sneller begint te trappen op je fiets,
-vergroot de vector $\vec{v}$ <Mute text="(je gaat sneller vooruit)" />.
+vergroot de vector $\vec{v}$ <Mute>(je gaat sneller vooruit)</Mute>.
 
 ![De snelheidsvector vergroot](img/snelheid_vergroot.png)
 
-Wanneer je remt, verkleint de vector $\vec{v}$ <Mute text="(je gaat trager vooruit)" />.
+Wanneer je remt, verkleint de vector $\vec{v}$ <Mute>(je gaat trager vooruit)</Mute>.
 
 ![De snelheidsvector verkleint](img/snelheid_verkleint.png)
 
