--- a/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/beeldvorming/index.mdx
@@ -33,7 +33,7 @@ Gelukkig is dat wel mogelijk, anders konden onze ogen nooit werken.
 **Beeldvorming** is het **samenbrengen van lichtstralen die vanuit dezelfde
 plaats vertrokken zijn**. Als we een **scherm** plaatsen op het punt waar de
 lichtstralen zijn samengebracht, zien we op dat scherm een **afbeelding** van
-het voorwerp <Mute text="(bv. de sinaasappel)" />.
+het voorwerp <Mute>(bv. de sinaasappel)</Mute>.
 
 ![](img/orange_beeldvorming.png)
 
@@ -74,7 +74,7 @@ Lichtstralen die evenwijdig blijven, tenslotte, vormen een **evenwijdige lichtbu
 De camera obscura <Mute text='(Latijn voor "donkere kamer")' /> was een van de
 eerste apparaten waarmee beeldvorming kon worden gedaan. In haar meest
 eenvoudige vorm bestaat ze uit een donkere ruimte met in één van de
-wanden een klein gaatje naar de <Mute text="(verlichte)" />
+wanden een klein gaatje naar de <Mute>(verlichte)</Mute>
 buitenwereld.
 
 ![](img/camera_obscura.png)
@@ -84,7 +84,7 @@ vertrokken zijn en door het gaatje gaan, niet zo veel uit elkaar zijn gegaan
 wanneer ze op de overstaande wand botsen. Hierdoor **verschijnt er op de wand
 tegenover het gaatje een vrij scherp beeld**.
 
-Omdat lichtstralen zich <Mute text="door een homogene middenstof" />
+Omdat lichtstralen zich <Mute>door een homogene middenstof</Mute>
 [rechtlijnig voortplanten](voortplanting#lichtstralen-gaan-in-een-rechte-lijn) en
 alle lichtstralen die op de overstaande wand geraken, door het gaatje
 moeten, zien we een **omgedraaid beeld**.
