--- a/src/content/lessen/fysica/lichtstralen/intro/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/intro/index.mdx
@@ -27,7 +27,7 @@ botsen, zien we voortdurend een hele mozaïek van kleuren.
 
 ![](img/mosaic.png)
 
-Er vallen lichtstralen <Mute text="(van de zon bijvoorbeeld)" />
+Er vallen lichtstralen <Mute>(van de zon bijvoorbeeld)</Mute>
 in op de bloem en de bloem weerkaatst die. Sommige weerkaatste
 lichtstralen komen toevallig in ons oog terecht en botsen daar
 op ons netvlies waardoor we de bloem kunnen zien.
