--- a/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
@@ -51,7 +51,7 @@ eigenlijk een verzameling van heel veel puntvormige lichtbronnen.
 <Expand title="De flitsende fotograaf">
 
 Fotografen moeten voortdurend nadenken over de lichtbron die ze gebruiken. Een
-puntvormige lichtbron <Mute text="(zoals de flitser op een fototoestel)" /> zorgt
+puntvormige lichtbron <Mute>(zoals de flitser op een fototoestel)</Mute> zorgt
 namelijk voor schaduwen met heel scherpe randen, wat geen mooie foto oplevert.
 
 ![Harde vs zachte schaduwen](img/soft_vs_hard_light.png "Harde schaduwen (links) en zachte schaduwen (rechts).")
