--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -78,9 +78,9 @@ Om te weten hoe de schaduw er bij een [diffuse
 lichtbron](lichtbronnen#puntvormige-en-diffuse-lichtbronnen) uit ziet, kijken
 we op welke plekken er wel of geen lichtstralen geraken.  Omdat een diffuse
 lichtbron eigenlijk bestaat uit allemaal kleine puntlichtbronnen, bekijken we
-de schaduw van enkele van die puntlichtbronnen apart. <Mute text="Om de
+de schaduw van enkele van die puntlichtbronnen apart. <Mute>Om de
 illustratie eenvoudig te houden, beperken we ons tot een bolvormige diffuse
-lichtbron." />
+lichtbron.</Mute>
 
 ![](img/diffuse_bron_straal_schaduwen.png)
 
@@ -101,10 +101,10 @@ veel meer flatterend zijn.
 ## De schaduw tekenen van een diffuse lichtbron
 
 Om de kernschaduw en de bijschaduw te tekenen van een ondoorzichtige bol
-wanneer deze belicht wordt door een <Mute text="bolvormige" /> diffuse
+wanneer deze belicht wordt door een <Mute>bolvormige</Mute> diffuse
 lichtbron, heb je vier lijntjes nodig. De eerste twee lijnen vertrekken vanuit
-de **bovenkant van de lichtbron** <Mute text="(groen op de figuur)" />, de andere
-twee vanuit de **onderkant van de lichtbron** <Mute text="(blauw op de figuur)" />.
+de **bovenkant van de lichtbron** <Mute>(groen op de figuur)</Mute>, de andere
+twee vanuit de **onderkant van de lichtbron** <Mute>(blauw op de figuur)</Mute>.
 Van de twee lijnen gaat er telkens één langs de bovenkant van de
 ondoorschijnende bol en één langs de onderkant.
 
