--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -140,8 +140,8 @@ $$
 $$
 
 En inderdaad, $f(\orange{4}) = -\orange{4} + 4 = 0$! De nulwaarde is dus
-$\orange{4}$ en het nulpunt is $(\orange{4}, 0)$ <Mute text="(met een x- én
-y-coördinaat)" />.  Dit kan je ook zien op onderstaande grafiek:
+$\orange{4}$ en het nulpunt is $(\orange{4}, 0)$ <Mute>(met een x- én
+y-coördinaat)</Mute>.  Dit kan je ook zien op onderstaande grafiek:
 
 ![](plt/nulpunt.png)
 
