--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -66,7 +66,7 @@ Waar we naast $x$ ook $y$ en $z$ als onbekende hebben. Zo'n vergelijking noemen 
 
 ## Oplossingsverzameling
 
-De bedoeling van een vergelijking is meestal om te zoeken **welk(e) getal(len)** we in plaats van de onbekende(n) <Mute text="(meestal gewoon $x$)" /> kunnen zetten **zodat de gelijkheid klopt**. Die getallen noemen we de _oplossingen_ van de vergelijking.
+De bedoeling van een vergelijking is meestal om te zoeken **welk(e) getal(len)** we in plaats van de onbekende(n) <Mute>(meestal gewoon $x$)</Mute> kunnen zetten **zodat de gelijkheid klopt**. Die getallen noemen we de _oplossingen_ van de vergelijking.
 
 Voor het eerste voorbeeld $\orange{x} + 6 = 2 - 3\orange{x}$, is er maar één getal waarvoor de
 gelijkheid klopt: $\orange{-1}$:
