--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -49,7 +49,7 @@ $$
 
 
 Zo krijgen we meteen de **formule om een afgeleide te berekenen in $x = a$**, afgekort
-schrijven we "$f'(a)$" <Mute text="(let op het accentje na de $f$)" />:
+schrijven we "$f'(a)$" <Mute>(let op het accentje na de $f$)</Mute>:
 
 
 $$
@@ -200,7 +200,7 @@ $$
 > van de vorm $(a + b)^2 = a^2 + 2ab + b^2$.
 
 Als we nu ook nog $\green{f(4)}$ uitrekenen, kennen we de twee termen in de
-teller <Mute text="(bovenaan)" /> van de breuk:
+teller <Mute>(bovenaan)</Mute> van de breuk:
 
 $$
 \begin{aligned}
@@ -243,10 +243,10 @@ $$
 
 
 Hier zie je duidelijk waar die _wegdrijvende_ $3$ vandaan komt. Wanneer we
-$\Delta x$ kleiner en kleiner kiezen <Mute text="(bv. $0{,}1$; $0{,}01$;
-$0{,}001$;...)" /> gaan we de $\green{-3}$ steeds vermenigvuldigen met kleiner
+$\Delta x$ kleiner en kleiner kiezen <Mute>(bv. $0{,}1$; $0{,}01$;
+$0{,}001$;...)</Mute> gaan we de $\green{-3}$ steeds vermenigvuldigen met kleiner
 en kleiner getal en gaan we van de $\green{-24}$ steeds een kleiner en kleiner
-getal aftrekken <Mute text="($0{,}3$; $0{,}03$; $0{,}003$;...)" />.
+getal aftrekken <Mute>($0{,}3$; $0{,}03$; $0{,}003$;...)</Mute>.
 
 De limiet uitrekenen is heel eenvoudig, want als $\Delta x$ heel dicht naar $0$
 gaat, dan zal $\green{-3 \Delta x}$ ook naar $0$ gaan en blijft dus enkel
