--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -65,7 +65,7 @@ Merk op de het **minteken** altijd deel uitmaakt van een van de factoren.
 
 ## Coëfficiënt en lettergedeelte
 
-De factoren van een eenterm kunnen <Mute text="(machten van)" /> getallen of
+De factoren van een eenterm kunnen <Mute>(machten van)</Mute> getallen of
 variabelen zijn. De factoren die **getallen** zijn, vormen het cijfergedeelte
 of de **coëfficiënt** van de eenterm. Het **toestandsteken hoort ook bij de
 coëfficiënt** van de eenterm. De factoren die **variabelen** zijn, vormen het
