--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -17,8 +17,8 @@ images: []
 Om eentermen met elkaar te vermenigvuldigen of te delen door elkaar, is het
 belangrijk dat we de **rekenregels voor het vermenigvuldigen en delen van
 machten met hetzelfde grondtal** in ons achterhoofd houden. Stel bijvoorbeeld
-dat we de volgende vermenigvuldiging hebben <Mute text="(waarbij $a \in
-\mathbb{R}$)" />:
+dat we de volgende vermenigvuldiging hebben <Mute>(waarbij $a \in
+\mathbb{R}$)</Mute>:
 
 
 $$
@@ -204,8 +204,8 @@ $$
 ## Eentermen met letterexponenten vermenigvuldigen of delen
 
 Het kan soms voorkomen dat een eenterm **letterexponenten** bevat. Stel
-bijvoorbeeld dat we de volgende vermenigvuldiging hebben <Mute text="($m, n \in
-\mathbb{Z}$)" />:
+bijvoorbeeld dat we de volgende vermenigvuldiging hebben <Mute>($m, n \in
+\mathbb{Z}$)</Mute>:
 
 
 $$
