--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -115,7 +115,7 @@ de $6$ en de $2$ bij elkaar optellen, maar niet de $6$ en de $5$?
 
 Wanneer we de coëfficiënten van gelijksoortige eentermen bij elkaar optellen,
 maken we eigenlijk gebruik van de **distributiviteit** van de vermenigvuldiging
-over de optelling in $\mathbb{Q}$ <Mute text="(geldt ook voor $\mathbb{R}$)" />:
+over de optelling in $\mathbb{Q}$ <Mute>(geldt ook voor $\mathbb{R}$)</Mute>:
 
 | Gewoon uitrekenen                                                  | Distributiviteit toepassen                                                                                    |
 | -----------------                                                  | --------------------------                                                                                    |
