--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -132,7 +132,7 @@ $$
 
 We vinden dat wanneer de variabele $\orange{l=5{,}0~\si{m}}$ en de variabele
 $\blue{b=4{,}0~\si{m}}$, dat dan de variabele
-$A$ <Mute text="(de oppervlakte)" /> gelijk is aan $20~\si{m}^2$.
+$A$ <Mute>(de oppervlakte)</Mute> gelijk is aan $20~\si{m}^2$.
 
 ![](img/living_area_computed.png)
 
