--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -212,7 +212,7 @@ $$
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
 van plaats veranderen**. Omdat zowel de variabelen als de getallen in onze
-eenterm _rationaal_ zijn <Mute text="(reëel mag ook)" />, mogen we ze dus van
+eenterm _rationaal_ zijn <Mute>(reëel mag ook)</Mute>, mogen we ze dus van
 plaats veranderen.
 
 $$
@@ -309,7 +309,7 @@ $$
 $$
 
 
-Waarbij $a, \orange{n}, \blue{m} \in \mathbb{Q}$ <Mute text="(of $\mathbb{R}$ mag ook)" />.
+Waarbij $a, \orange{n}, \blue{m} \in \mathbb{Q}$ <Mute>(of $\mathbb{R}$ mag ook)</Mute>.
 
 </Expand>
 
