--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -25,7 +25,7 @@ functie.
 ## Domein van een functie
 
 Het _domein_ van een functie is de verzameling
-van x-waarden waarvoor er een functiewaarde <Mute text="(een y-waarde)" /> bestaat.
+van x-waarden waarvoor er een functiewaarde <Mute>(een y-waarde)</Mute> bestaat.
 
 -   Voor elke x-waarde die **niet in het domein** zit, bestaat er **géén
     y-waarde**.
@@ -109,13 +109,13 @@ Die grafiek ziet er zo uit:
 
 Om op deze grafiek het **domein** af te lezen, moet je de grafiek **projecteren
 op de x-as**. Het resultaat van de projectie is aangeduid **<span 
-class="green">in het groen op de x-as</span>**. <Mute text="We gaan ervan uit 
-dat de grafiek oneindig blijft verder stijgen aan de rechterkant." /> We zien 
+class="green">in het groen op de x-as</span>**. <Mute>We gaan ervan uit 
+dat de grafiek oneindig blijft verder stijgen aan de rechterkant.</Mute> We zien 
 dan dat $\green{dom f = [-5; +\infty[}$.
 
 ![](plt/dom.png)
 
-Het **beeld** <Mute text="(of het bereik)" /> van diezelfde functie kunnen we
+Het **beeld** <Mute>(of het bereik)</Mute> van diezelfde functie kunnen we
 vinden door de grafiek nu te **projecteren op de y-as**. Op de onderstaande
 grafiek zie je het resultaat van deze projectie
 **<span class="green">in het groen op de y-as</span>**.
