--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -35,8 +35,8 @@ waardentabel:
 
 In de laatste rij van die waardentabel is $\orange{x = 5}$ en $\green{y =
 1{,}5}$. We kunnen dit voorstellen door een puntje met coördinaten
-$(\orange{5};~\green{1{,}5})$. <Mute text="(Probeer eens op het puntje te
-klikken.)" />
+$(\orange{5};~\green{1{,}5})$. <Mute>(Probeer eens op het puntje te
+klikken.)</Mute>
 
 ![](plt/single_x.png)
 
