--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -31,7 +31,7 @@ is $x=\orange{2}$ een nulwaarde want $f(\orange{2}) = \orange{2} - 2 = 0$.
 Je vindt de nulwaarden van een functie door **het functievoorschrift gelijk te
 stellen aan nul** en die [vergelijking op te lossen](../1g_vgl/oplossen). We
 stellen het functievoorschrift gelijk aan _nul_ omdat we op zoek zijn naar de
-x-waarden die het voorschrift <Mute text="en dus de y-waarde" /> _nul_ maken.
+x-waarden die het voorschrift <Mute>en dus de y-waarde</Mute> _nul_ maken.
 Voor het bovenstaande voorbeeld:
 
 $$
@@ -50,7 +50,7 @@ De namen _nulpunten_ en _nulwaarden_ worden soms door elkaar gebruikt, maar
 strikt gezien zijn ze niet hetzelfde. Nul*waarden* zijn x-_waarden_, maar
 nul*punten* zijn _punten_ met een x- én y-coördinaat. De x-coördinaat van een
 nulpunt is de nul*waarde*. De y-coördinaat van een nulpunt is altijd
-_nul_ <Mute text="(uiteraard)" />. Als de nulwaarde bijvoorbeeld $\orange{-2}$ is,
+_nul_ <Mute>(uiteraard)</Mute>. Als de nulwaarde bijvoorbeeld $\orange{-2}$ is,
 dan is het nulpunt $(\orange{-2},~0)$.
 
 ## Nulpunten op een grafiek
