--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -18,7 +18,7 @@ positief of negatief is. Deze informatie vatten we overzichtelijk samen in een
 
 ## Tekenschema vanuit een grafiek
 
-Welke x-waarden welk teken <Mute text="(positief/negatief/nul)" /> opleveren
+Welke x-waarden welk teken <Mute>(positief/negatief/nul)</Mute> opleveren
 voor de y-waarden, vatten we samen in een **tekenschema** <Mute text='(ook wel
 "tekentabel" of "tekenverloop" genoemd)'/>.  Als de [grafiek van een
 functie](grafiek) is gegeven, kunnen we zien waar de functiewaarden <Mute
@@ -54,10 +54,10 @@ We kunnen een tekenschema ook maken _zonder_ een grafiek. Dit doen we in drie
 stappen.
 
 1. Zet de grenzen van het [domein](domein_beeld#domein-van-een-functie) in de bovenste rij van het tekenschema;
-2. Zoek alle [nulpunten](nulpunten) en zet ze van klein naar groot <Mute text="(volgens x-waarde)" /> tussen de grenzen van het domein;
-3. Vind de tekens van $y$ tussen alle x-waarden in het schema <Mute text="(tenzij die x-waarden buiten het domein liggen)" />.
+2. Zoek alle [nulpunten](nulpunten) en zet ze van klein naar groot <Mute>(volgens x-waarde)</Mute> tussen de grenzen van het domein;
+3. Vind de tekens van $y$ tussen alle x-waarden in het schema <Mute>(tenzij die x-waarden buiten het domein liggen)</Mute>.
 
-We werken deze stappen uit voor de <Mute text="(reële)" /> functie met
+We werken deze stappen uit voor de <Mute>(reële)</Mute> functie met
 [voorschrift](voorschrift) 
 $$
 f(x) = -x^2 + 9
@@ -165,10 +165,10 @@ Et voilà! 💪 We krijgen hetzelfde tekenschema als daarnet.
 
 ## Enkel nulpunten en grenzen van domein
 
-De x-waarden die in een tekenschema staan <Mute text="(de bovenste rij)" />,
-zijn _ofwel nulwaarden_ <Mute text="($-3$ en $3$ in het vorige voorbeeld)"/>
-_ofwel grenzen van het domein_ <Mute text="($-\infty$ en $+\infty$ in het
-voorbeeld)"/>. Er zijn geen andere x-waarden nodig. Dat is omdat **het teken
+De x-waarden die in een tekenschema staan <Mute>(de bovenste rij)</Mute>,
+zijn _ofwel nulwaarden_ <Mute>($-3$ en $3$ in het vorige voorbeeld)</Mute>
+_ofwel grenzen van het domein_ <Mute>($-\infty$ en $+\infty$ in het
+voorbeeld)</Mute>. Er zijn geen andere x-waarden nodig. Dat is omdat **het teken
 van $y$ enkel kan veranderen na een nulpunt of na een grens van het domein**.
 
 Voor echt heel speciale functies kan het teken ook na andere x-waarden
