--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -111,7 +111,7 @@ $$
 
 
 We komen uit dat $\green{y} = \green{0{,}64}$. Dat betekent dat de bal na
-ongeveer $0{,}64~\si{s}$ op de grond zal zijn. <Mute text="(Probeer dit thuis gerust ook eens uit door een balletje van die hoogte te laten vallen en de valtijd te meten met een chronometer.)" />
+ongeveer $0{,}64~\si{s}$ op de grond zal zijn. <Mute>(Probeer dit thuis gerust ook eens uit door een balletje van die hoogte te laten vallen en de valtijd te meten met een chronometer.)</Mute>
 Voor het functievoorschrift $\green{y} = 0{,}45 \cdot \sqrt{\orange{x}}$ geldt
 dus dat wanneer $\orange{x} = \orange{2}$, dan is $\green{y} = \green{0{,}64}$.
 Wiskundig zeggen we: **de functiewaarde van $\orange{2}$ is $\green{0{,}64}$**.
