--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -54,8 +54,8 @@ $$
 $$
 
 
-We gaan ervan uit dat de variabelen <Mute text="($a$ en $b$)" /> reële getallen
-zijn <Mute text="(of rationale getallen, maakt niet uit)" />. We mogen dus de
+We gaan ervan uit dat de variabelen <Mute>($a$ en $b$)</Mute> reële getallen
+zijn <Mute>(of rationale getallen, maakt niet uit)</Mute>. We mogen dus de
 rekenregels voor reële getallen toepassen. Die zeggen dat de **optelling in
 $\mathbb{R}$ associatief is**. Dat betekent dat het niet uitmaakt of we al dan
 niet haakjes zetten in een optelling en dat het niet uitmaakt waar we dan wel
@@ -85,7 +85,7 @@ $$
 Het **aftrekken** van twee veeltermen gaat zo:
 
 1. Laat de **haakjes weg** en **verander de toestandstekens**
-   <Mute text="($+$ en $-$)" /> van de termen van de veelterm die **na het
+   <Mute>($+$ en $-$)</Mute> van de termen van de veelterm die **na het
    minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
 
@@ -426,7 +426,7 @@ Het **optellen** van twee veeltermen doe je zo:
 Het **aftrekken** van twee veeltermen gaat zo:
 
 1. Laat de **haakjes weg** en **verander de toestandstekens**
-   <Mute text="($+$ en $-$)" /> van de termen van de veelterm die **na het
+   <Mute>($+$ en $-$)</Mute> van de termen van de veelterm die **na het
    minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
 
