--- a/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
@@ -10,7 +10,7 @@ kan vinden."
 images: []
 ---
 
-Een veelterm <Mute text="(of polynoom)" /> is een **som van
+Een veelterm <Mute>(of polynoom)</Mute> is een **som van
 [eentermen](../eentermen/eenterm)**. De eentermen waaruit een veelterm
 bestaat, noemen we kortweg de **termen** van de veelterm. Enkele voorbeelden:
 
