--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -54,8 +54,8 @@ $$
 
 Wanneer de **uitdrukking tussen haakjes een eenterm** is, mag je de **haakjes
 gewoon weglaten**. Dat mag omdat de vermenigvuldiging in $\mathbb{R}$
-associatief is en we ervan uitgaan dat alle variabelen reële <Mute text="($\in
-\mathbb{R}$)" /> of rationale <Mute text="($\in \mathbb{Q}$)" /> getallen zijn.
+associatief is en we ervan uitgaan dat alle variabelen reële <Mute>($\in
+\mathbb{R}$)</Mute> of rationale <Mute>($\in \mathbb{Q}$)</Mute> getallen zijn.
 Bijvoorbeeld:
 
 -   
