--- a/src/content/lessen/wiskunde/verzamelingen/intro/index.mdx
+++ b/src/content/lessen/wiskunde/verzamelingen/intro/index.mdx
@@ -70,8 +70,8 @@ $$
 Een verzameling kan meerdere _deelverzamelingen_ bevatten. Zo bevat de
 verzameling $\{1, -4, 9\}$ onder andere de deelverzamelingen $\{1, -4\}$ en
 $\{1, 9\}$. Wanneer een verzameling een deelverzameling is van een andere
-verzameling, gebruiken we het symbool $\subset$.  <Mute text="(Merk het
-verschil op met het symbool $\in$.)" /> Bijvoorbeeld 
+verzameling, gebruiken we het symbool $\subset$.  <Mute>(Merk het
+verschil op met het symbool $\in$.)</Mute> Bijvoorbeeld 
 $$
 \{1, 9\} \subset \{1, -4, 9\}
 $$
