--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -40,7 +40,7 @@ Je komt krachten voortdurend tegen in het dagelijkse leven:
 
 ![](img/krachten_voorbeelden.png)
 
-Het symbool voor de grootheid kracht is $F$ <Mute text="(van het Engelse <em>force</em>)" /> en de
+Het symbool voor de grootheid kracht is $F$ <Mute>(van het Engelse <em>force</em>)</Mute> en de
 [SI-eenheid](../grootheden_eenheden/intro##si-eenheden-maken-duidelijke-afspraken)
 is **de newton** (symbool: $\si{N}$), genoemd naar de bekende natuurkundige
 [Isaac Newton](https://nl.m.wikipedia.org/wiki/Isaac_Newton).
@@ -84,8 +84,8 @@ dat niet zonder de winkelkar aan te raken. We spreken dan over een
 We gaan voor de eenvoud alle voorwerpen voorstellen als **puntmassa**'s. Dat
 betekent dat we in gedachte elk voorwerp waar krachten op inwerken gaan
 vervangen door een klein puntje dat dezelfde massa heeft als het voorwerp. We
-tekenen de puntmassa **in het zwaartepunt van het voorwerp** <Mute text="(lees: 
-het midden)" />. De krachten die inwerken op het voorwerp, tekenen we dan ook 
+tekenen de puntmassa **in het zwaartepunt van het voorwerp** <Mute>(lees: 
+het midden)</Mute>. De krachten die inwerken op het voorwerp, tekenen we dan ook 
 in die puntmassa.
 
 ![](img/puntmassa.png)
