--- a/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
@@ -88,8 +88,8 @@ ringvormige zonsverduisteringen.
 
 Ruwweg gezegd draait de maan rond de aarde en de aarde rond de zon. Eén rondje
 van de aarde rond de zon duurt ongeveer een jaar. Eén rondje van de maan rond
-de aarde duurt ongeveer een **maan**d <Mute text="($27{,}321661$ dagen om
-precies te zijn)" />.  Terwijl de maan rond de aarde draait, lijkt vanop aarde
+de aarde duurt ongeveer een **maan**d <Mute>($27{,}321661$ dagen om
+precies te zijn)</Mute>.  Terwijl de maan rond de aarde draait, lijkt vanop aarde
 de maan verschillende vormen aan te nemen: soms een volledige cirkel 🌝, soms
 iets sikkelvormig 🌛. Dit noemen we de **schijngestalten van de maan** of de
 **maanfasen**.
@@ -98,13 +98,13 @@ iets sikkelvormig 🌛. Dit noemen we de **schijngestalten van de maan** of de
 
 Vanuit de ruimte wordt het duidelijk waar deze schijngestalten vandaan komen.
 Terwijl de maan rond de aarde draait, kijken we vanop aarde naar een andere
-kant van de schaduw. <Mute text="De nummertjes op de illustratie komen overeen
-met de schijngestalten op de vorige figuur." />
+kant van de schaduw. <Mute>De nummertjes op de illustratie komen overeen
+met de schijngestalten op de vorige figuur.</Mute>
 
 ![](img/maanfasen_zijaanzicht.png)
 
-In "bovenaanzicht" ziet de situatie er als volgt uit. <Mute text="Ook hier
-komen de nummers overeen." />
+In "bovenaanzicht" ziet de situatie er als volgt uit. <Mute>Ook hier
+komen de nummers overeen.</Mute>
 
 ![](img/maanfasen_bovenaanzicht.png)
 
@@ -124,8 +124,8 @@ en de maan op één lijn komen te staan. Dat gebeurt slechts twee keer per maand
 Wanneer de maan door het ecliptisch vlak gaat en de zon toevallig in dezelfde
 lijn als de maan en de aarde staat, kan er een zonsverduistering of een
 maansverduistering gebeuren. Een **zonsverduistering** ([daarnet](#zonsverduistering) besproken) gebeurt als **de maan tussen de aarde en de
-zon staat** <Mute text="(tijdens een nieuwe maan dus)" />. Een **maansverduistering**, daarentegen, kan enkel als **de aarde
-tussen de maan en de zon staat** <Mute text="(volle maan)" /> op het moment dat de maan door het ecliptisch
+zon staat** <Mute>(tijdens een nieuwe maan dus)</Mute>. Een **maansverduistering**, daarentegen, kan enkel als **de aarde
+tussen de maan en de zon staat** <Mute>(volle maan)</Mute> op het moment dat de maan door het ecliptisch
 vlak beweegt.
 
 ![](img/maansverduistering.png)
@@ -136,7 +136,7 @@ Sterren, planeten en manen **staan enorm ver van elkaar**, zelfs binnen
 eenzelfde zonnestelsel. Ook zijn er **immense verschillen in hoe groot**
 verschillende hemellichamen zijn.
 Illustraties met meerdere hemellichamen zullen
-daarom bijna nooit op ware schaal getekend <Mute text="(kunnen)" /> worden.
+daarom bijna nooit op ware schaal getekend <Mute>(kunnen)</Mute> worden.
 
 Dat is ook het geval bij alle bovenstaande illustraties met de zon, de aarde en
 de maan. Om je toch een idee te geven van de enorme afstanden tussen deze
