--- a/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/omvormen/index.mdx
@@ -96,7 +96,7 @@ $$
 2x - 6 = 8 - x
 $$
 
-Om die om te zetten naar de vorm die we willen <Mute text="(namelijk $x= \text{(een getal)}$)" />, mag er in het rechterlid geen $x$ staan. De eenvoudigste manier om die weg te krijgen is door een vergelijking te maken met $8 - x \orange{+ x}$ in het rechterlid:
+Om die om te zetten naar de vorm die we willen <Mute>(namelijk $x= \text{(een getal)}$)</Mute>, mag er in het rechterlid geen $x$ staan. De eenvoudigste manier om die weg te krijgen is door een vergelijking te maken met $8 - x \orange{+ x}$ in het rechterlid:
 
 $$
 \begin{aligned}
