--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -13,7 +13,7 @@ images: []
 ---
 
 Een [vergelijking](intro) van de eerste graad in één onbekende $x$ is een vergelijking
-waar er maar één onbekende is <Mute text="(genaamd $x$)" /> en waarbij de
+waar er maar één onbekende is <Mute>(genaamd $x$)</Mute> en waarbij de
 **hoogste macht van die $x$ gelijk is aan $1$**. Bijvoorbeeld de
 vergelijking
 
@@ -49,7 +49,7 @@ De drie stappen zijn:
 
 1. **Schoonmaakwerk**: vereenvoudig het linker- en rechterlid zodat er langs
    beide kanten iets staat van de vorm $a x + b$
-   <Mute text="(met $a, b \in \mathbb{R}$)" />;
+   <Mute>(met $a, b \in \mathbb{R}$)</Mute>;
 2. **Alle $x$-en naar links**: vorm de vergelijking om zodat enkel het
    linkerlid nog $x$-en bevat;
 3. **Alle getallen naar rechts**: vorm de vergelijking om zodat alle getallen in
@@ -143,7 +143,7 @@ naar het rechterlid. Dat doen we ook in twee stappen.
 2. Deel het linker- en rechterlid door de $a$ zodat $a$ verdwijnt uit het
    linkerlid.
 
-In de eerste stap trekken we $b_{links}$ <Mute text="($= -2$)" /> af van het linker- en rechterlid:
+In de eerste stap trekken we $b_{links}$ <Mute>($= -2$)</Mute> af van het linker- en rechterlid:
 $$
 \begin{aligned}
 \Leftrightarrow -5x - 2 &= 12\\
@@ -171,7 +171,7 @@ a &= -5 \\
 $$
 
 Nu moeten we enkel nog de $a$ links weg krijgen. Dat kunnen we doen door het
-linker- en rechterlid te delen door $a$ <Mute text="($= -5$)" />.
+linker- en rechterlid te delen door $a$ <Mute>($= -5$)</Mute>.
 
 $$
 \begin{aligned}
