--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -27,7 +27,7 @@ $$
 
 We hebben ons echter nooit afgevraagd of die afgeleide wel altijd berekend kan
 worden. In deze les leren we over de **afleidbaarheid** van een functie. We
-gaan zien dat sommige <Mute text="(meestal vrij exotische)" /> functies niet
+gaan zien dat sommige <Mute>(meestal vrij exotische)</Mute> functies niet
 voor elke keuze van $x = a$ kunnen afgeleid worden.
 
 ## Linker- en rechterlimiet, wat was dat weer?
@@ -62,7 +62,7 @@ We zien dat in zowel de linker- als rechterkolom de getallen steeds dichter en
 dichter bij $0$ komen.
 
 -   Wanneer we $\Delta x$ **kleiner** houden dan $0$, zeggen we dat we de
-    **linkerlimiet** berekenen <Mute text="(omdat we van links naar $0$ gaan)" />. Dit
+    **linkerlimiet** berekenen <Mute>(omdat we van links naar $0$ gaan)</Mute>. Dit
     schrijven we als 
 $$
 \lim_{\Delta x \lt{\to} 0}
@@ -70,7 +70,7 @@ $$
  Let op het
     _kleiner dan_-teken ($\lt$) onder de pijl van de limiet.
 -   Wanneer we $\Delta x$ **groter** houden dan $0$, zeggen we dat we de
-    **rechterlimiet** berekenen <Mute text="(omdat we van rechts naar $0$ gaan)" />. Dit
+    **rechterlimiet** berekenen <Mute>(omdat we van rechts naar $0$ gaan)</Mute>. Dit
     schrijven we als 
 $$
 \lim_{\Delta x \gt{\to} 0}
@@ -119,8 +119,8 @@ functie. We zien in onderstaande functie dat er een gat zit tussen $x = 2$ en
 $x = 5$. Dat gat zorgt ervoor dat we in $x = 2$ **geen rechterlimiet** kunnen
 berekenen, omdat wanneer $\Delta x$ _iets_ groter is dan $0$, dan moeten we de
 functiewaarde berekenen van een x-waarde die _iets_ groter is dan $2$. Maar
-alle x-waarden die _iets_ groter zijn dan $2$ <Mute text="(bv. $2{,}1$;
-$2{,}01$; $2{,}001$;...)" /> liggen in die opening en hebben dus **geen
+alle x-waarden die _iets_ groter zijn dan $2$ <Mute>(bv. $2{,}1$;
+$2{,}01$; $2{,}001$;...)</Mute> liggen in die opening en hebben dus **geen
 functiewaarden**.
 
 ![Discontinue functie tusse x = 2 en x = 5](img/afleidbaarheid_discontinu.png)
@@ -144,8 +144,8 @@ afleidbaar omdat noch de linker- noch de rechterafgeleide bestaat.
 
 Wanneer een functie **in elk punt van haar domein** afleidbaar is, is het dus
 **onmogelijk dat die functie discontinu is**. We kunnen dus stellen dat **een
-functie die overal afleidbaar is, altijd continu is** <Mute text="(geen gaten
-bevat)" />.
+functie die overal afleidbaar is, altijd continu is** <Mute>(geen gaten
+bevat)</Mute>.
 
 ## Functies met "knikken" zijn niet afleidbaar in de knik
 
