--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -68,8 +68,8 @@ positie** ($\green{180~\si{m}}$) **en de eerste positie**
 ($\green{20~\si{m}}$). Voor de tijd is dat het **verschil tussen de tweede
 tijd** ($\orange{3{,}00~\si{s}}$) **en de eerste tijd**
 ($\orange{1{,}00~\si{s}}$). Die twee verschillen zetten we vervolgens in een
-**breuk** met in de teller <Mute text="(boven)" /> het verschil van posities en 
-in de noemer <Mute text="(onder)" /> het
+**breuk** met in de teller <Mute>(boven)</Mute> het verschil van posities en 
+in de noemer <Mute>(onder)</Mute> het
 verschil van tijden. We kunnen de formule voor gemiddelde snelheid dus ook als
 volgt schrijven:
 
@@ -88,15 +88,15 @@ _hooguit één_ $\green{\text{positie}}$ overeen. Daarom mogen we zeggen dat
 Maria's **positie een functie is van de tijd**.
 
 > Als je niet meer goed weet vanaf wanneer een verband tussen twee variabelen
-> <Mute text="(zoals positie en tijd)" /> een functie is, kan je altijd onze
+> <Mute>(zoals positie en tijd)</Mute> een functie is, kan je altijd onze
 > [les over functies](../functies/intro) eens nalezen.
 
 We kunnen de **positie** die overeenkomt met tijdstip $\orange{x}$ dus **de
 functiewaarde van $\orange{x}$** noemen en afkorten als $\green{f(x)}$. Wanneer
 we op de luchtfoto's de racewagens met elkaar verbinden, zien we inderdaad dat
 de posities mooi de [grafiek van een functie](../functies/grafiek) volgen
-waarbij de **tijd op de x-as** <Mute text="(horizontale as)" /> staat en de
-**positie op de y-as** <Mute text="(verticale as)" />:
+waarbij de **tijd op de x-as** <Mute>(horizontale as)</Mute> staat en de
+**positie op de y-as** <Mute>(verticale as)</Mute>:
 
 ![De positie van Maria als functie van de tijd](img/maria_race_function.png)
 
@@ -115,14 +115,14 @@ $$
 $$
 
 
--   In de teller <Mute text="(boven)" /> staat $\green{f(x_2)} -
+-   In de teller <Mute>(boven)</Mute> staat $\green{f(x_2)} -
   \green{f(x_1)}$. Daarmee berekenen we het verschil van de functiewaarden van
     $x_2$ en $x_1$. **De teller zegt zo hoeveel de functiewaarde is veranderd**
     tussen $x_1$ en $x_2$.
--   In de noemer <Mute text="(onder)" /> staat dan weer het verschil van die
+-   In de noemer <Mute>(onder)</Mute> staat dan weer het verschil van die
     $x_2$ en $x_1$ zélf. Door te delen door $\orange{x_2} - \orange{x_1}$
     berekenen we de "**gemiddelde** verandering van de functiewaarde **per
-    $x-$eenheid** <Mute text="(bv. per seconde)" /> tussen $x_1$ en $x_2$" in
+    $x-$eenheid** <Mute>(bv. per seconde)</Mute> tussen $x_1$ en $x_2$" in
     plaats van gewoon de "verandering van de functiewaarde tussen $x_1$ en
     $x_2$".
 
