--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -15,8 +15,8 @@ images: []
 Om de machten en wortels van eentermen te kunnen berekenen, is het belangrijk
 dat we de **rekenregels voor de macht van een macht en de wortel van een
 macht** steeds goed in ons achterhoofd houden. We zullen ze hier kort even
-herhalen. Stel dat we de volgende macht moeten uitrekenen <Mute text="(waarbij
-$a \in \mathbb{R}$)" />:
+herhalen. Stel dat we de volgende macht moeten uitrekenen <Mute>(waarbij
+$a \in \mathbb{R}$)</Mute>:
 
 
 $$
