--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -44,8 +44,8 @@ vectoren **gelijk**. De volgende twee vectoren, zijn bijvoorbeeld gelijk:
 
 De **grootte** van de vector is **hoe lang** de vector is. De grootte van een
 vector is **altijd positief**. We noteren de grootte van een vector $\vec{v}$
-als $\norm{\vec{v}}$ of ook wel gewoon als $v$ <Mute text="(geen pijltje op de
-$v$)" />.
+als $\norm{\vec{v}}$ of ook wel gewoon als $v$ <Mute>(geen pijltje op de
+$v$)</Mute>.
 
 | Schrijf          | Lees                     |
 | ---------------- | ------------------------ |
