--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -87,13 +87,14 @@ Stel dat we $5{,}2 \green{\si{ k}}\si{m}$ willen omzetten naar $\blue{\si{d}}\si
 1. Zet alle prefixen om naar een macht van 10. De opgave wordt dan:
    "Zet $5{,}2 \cdot \green{10^{3}} \si{ m}$ om naar $\ldots\text{iets}\ldots\cdot \blue{10^{-1}}\si{ m}$"
 2. Los op volgens de methode van het [omzetten van machten van 10](machten_van_10#machten-van-10-omzetten)
-   $\begin{aligned}
+   $$
+   \begin{aligned}
    5{,}2 \cdot \green{10^{3}} \si{ m}
    &= 5{,}2 \cdot \green{10^{3}} \cdot \orange{10^1} \cdot \blue{10^{-1}}\si{ m}\\
    &= 5{,}2\cdot 10^{\green{3} + \orange{1}} \cdot \blue{10^{-1}} \si{ m}\\
    &= 5{,}2\cdot 10^4 \cdot \blue{10^{-1}}\si{ m}
    \end{aligned}
-$$
+   $$
 3. Vervang de bijhorende macht van 10 terug door de prefix:
    
 $$
