--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -131,7 +131,7 @@ en vervolgens
 
 $$
 \begin{aligned}
-3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot 10^{-9 \cdot \orange{10^{11}}} \cdot \blue{10^{-11}} \\
+3{,}34 \cdot 10^{-9} &= 3{,}34 \cdot 10^{-9} \cdot \orange{10^{11}} \cdot \blue{10^{-11}} \\
  &= 3{,}34 \cdot 10^{2} \cdot \blue{10^{-11}} \\
  &= 3{,34 \cdot 10^{2}} \cdot \blue{10^{-11}} \\
  &= 334 \cdot \blue{10^{-11}} \\
@@ -155,10 +155,10 @@ $$
 Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot
 \blue{10^c}$ <Mute>(met $a, b, c \in \mathbb{R}$)</Mute>:
 
-Vermenigvuldig $a \cdot 10^b$ met
-<span class="blue">$10^{c}$ om de juiste macht van 10 te hebben</span> en met
-<span class="orange">$10^{-c}$ om alles gelijk te houden</span> aan $a \cdot 10^b$.
-Combineer vervolgens de $a \cdot 10^{b} \cdot \orange{10^{-c}}$ tot één getal en
-laat de $\cdot \blue{10^{c}}$ erachter staan.
+* Vermenigvuldig $a \cdot 10^b$ met <span class="blue">$10^{c}$ om de juiste
+  macht van 10 te hebben</span> en met <span class="orange">$10^{-c}$ om alles
+  gelijk te houden</span> aan $a \cdot 10^b$.
+* Combineer vervolgens de $a \cdot 10^{b} \cdot \orange{10^{-c}}$ tot één getal
+  en laat de $\cdot \blue{10^{c}}$ erachter staan.
 
 </Attention>
