Fix Mute not inline in veeltermen/bewerkingen

--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -28,7 +28,7 @@ voorlopig echter tot vier basisbewerkingen beperken:
 
 We bespreken deze bewerkingen hieronder apart.
 
-<Expand title="Alle variabelen in deze les zijn $\in \mathbb{R}$ (of $\in\mathbb{Q}$)">
+<Expand title="Alle variabelen in deze les zijn reëel of rationaal">
 
 We gaan ervan uit dat alle variabelen in deze les een element zijn van de reële
 getallen. Als je nog niet weet wat reële getallen zijn, mag je ook aannemen
@@ -84,9 +84,7 @@ $$
 
 Het **aftrekken** van twee veeltermen gaat zo:
 
-1. Laat de **haakjes weg** en **verander de toestandstekens**
-   <Mute>($+$ en $-$)</Mute> van de termen van de veelterm die **na het
-   minteken** stond.
+1. Laat de **haakjes weg** en **verander de toestandstekens** <Mute>($+$ en $-$)</Mute> van de termen van de veelterm die **na het minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
 
 Bij het **aftrekken van veeltermen** gaan we ook de haakjes weglaten, maar dan
@@ -229,22 +227,22 @@ $$
 > grondtal** toepassen. Wanneer we delen door $u$ moeten we daarom in elke
 > term van de veelterm $1$ aftrekken van de exponent van $u$. Bij $-2u^2v^3$,
 > bijvoorbeeld, krijgen we na een deling door $u$ $-2\orange{u}v^3$ omdat
-> $\begin{aligned}
 
+$$
+\begin{aligned}
     -2\orange{u^2}v^3:\orange{u} &= -2\orange{u^{2 - 1}}v^3\\
     &= -2\orange{u}v^3
-
 \end{aligned}
 $$
 
 > Bij de deling van $-4uv^3$ door $u$ **valt de $u$ in de term weg** omdat
-> $\begin{aligned}
 
+$$
+\begin{aligned}
     -4\orange{u}v^3:\orange{u} &= -4\orange{u^{1-1}}v^3\\
     &= -4\orange{u^0}v^3\\
     &= -4\cdot \orange{1} \cdot v^3\\
     &= -4v^3
-
 \end{aligned}
 $$
 
@@ -425,9 +423,7 @@ Het **optellen** van twee veeltermen doe je zo:
 
 Het **aftrekken** van twee veeltermen gaat zo:
 
-1. Laat de **haakjes weg** en **verander de toestandstekens**
-   <Mute>($+$ en $-$)</Mute> van de termen van de veelterm die **na het
-   minteken** stond.
+1. Laat de **haakjes weg** en **verander de toestandstekens** (+ en -) van de termen van de veelterm die **na het minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
 
 </Attention>
