Fix KaTeX in veeltermen/getalwaarde

--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -28,11 +28,12 @@ $$
 $$
 
 2. Je krijgt een bewerking met enkel getallen. **Reken die bewerking uit**:
-   $\begin{aligned}
+$$
+\begin{aligned}
    -5\cdot\orange{2}\green{(-1)}^2 + 3\cdot \orange{2} &= -5\cdot\orange{2}\cdot\green{1} + 3\cdot \orange{2}\\
     &= -10 + 6\\
     &= -4
-   \end{aligned}
+\end{aligned}
 $$
 
 De getalwaarde van de veelterm $-5ab^2 + 3a$ voor $\orange{a=2}$ en $\green{b=-1}$ is dus gelijk aan $-4$.
