Fix KaTeX in veeltermen/vereenvoudigen

--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -58,17 +58,15 @@ associatief is en we ervan uitgaan dat alle variabelen reële <Mute>($\in
 \mathbb{R}$)</Mute> of rationale <Mute>($\in \mathbb{Q}$)</Mute> getallen zijn.
 Bijvoorbeeld:
 
--   
+- Vb. 1:
 $$
 -ab^2 + \sqrt{3}\cdot \orange{(b^3c^2)} = -ab^2 + \sqrt{3}\cdot \orange{b^3c^2}
 $$
-
--   
+- Vb. 2:
 $$
 6\cdot \orange{(x^3y^3)} + 5y^2 = 6\cdot \orange{x^3y^3} + 5y^2
 $$
-
--   
+- Vb. 3:
 $$
 -2\cdot \orange{(st^2)} + \blue{(\frac{5}{2}t^3u^2)} - 9 = - 2\cdot \orange{st^2} + \blue{\frac{5}{2}t^3u^2} - 9
 $$
@@ -78,17 +76,15 @@ Let wel op wanneer er een minteken tussen haakjes staat. Dat **minteken breng
 je naar voor in de term** en combineer je vooraan met het toestandsteken dat er
 al stond:
 
--   
+- Vb. 1:
 $$
 \orange{-p^3(-5q^2r)} - 5q \blue{+ 3(-p^2r^3)} = \orange{5p^3q^2r} - 5q \blue{- 3p^2r^3}
 $$
-
--   
+- Vb. 2:
 $$
 -x^2y \orange{+ 3(-xy^2)} = - x^2y \orange{- 3xy^2}
 $$
-
--   
+- Vb. 3:
 $$
 y^3 + \sqrt{5} y^2 \orange{- (-9y)} = y^3 + \sqrt{5} y^2 \orange{+ 9y}
 $$
@@ -98,17 +94,21 @@ Wanneer de **uitdrukking tussen haakjes een veelterm** is, probeer je eerst die
 veelterm apart te vereenvoudigen. Wanneer die niet vereenvoudigbaar meer is,
 pas je de **distributieve eigenschap** toe.
 
--   $\begin{aligned}
+- Vb. 1:
+$$
+\begin{aligned}
     3(p^2 + \orange{(-5p^3)}) - 2p &= 3(p^2 - \orange{5p^3}) - 2p\\
      &= \orange{3p^2 - 15p^3} - 2p
-    \end{aligned}
+\end{aligned}
 $$
--   $\begin{aligned}
+- Vb. 2:
+$$
+\begin{aligned}
     -6x^4 - 2x (\orange{-3(4y^2)} - 2y + 5) &= - 6x^4 - 2x (\orange{-12y^2} - 2y + 5)\\
      &= - 6x^4 \orange{+ 24xy^2 + 4xy - 10x}
-    \end{aligned}
+\end{aligned}
 $$
--   
+- Vb. 3:
 $$
 5q^3r^2 \orange{- (q + 2r)} = 5q^3 r^2 \orange{- q - 2r}
 $$
@@ -127,17 +127,15 @@ gelijksoortige eentermen kunnen vinden.
 > onze les over het [vereenvoudigen van eentermen](vereenvoudig_eenterm)
 > eens na. Enkele voorbeelden:
 
--   
+- Vb. 1:
 $$
 \orange{-2yx^2\cdot 3x} + 4y^2 = \orange{- 6x^3 y} + 4y^2
 $$
-
--   
+- Vb. 2:
 $$
 \orange{2\cdot 5 q^3} \blue{- p \cdot p^2} + 4 = \orange{10 q^3} \blue{- p^3} + 4
 $$
-
--   
+- Vb. 3:
 $$
 \orange{zyx} \blue{- 2 \frac{xy^3}{3} x} \green{+ 3z^3z} = \orange{xyz} \blue{- \frac{2}{3} x^2y^3} \green{+ 3z^4}
 $$
@@ -161,17 +159,15 @@ eentermen te vinden.
 Hieronder hebben we per veelterm de gelijksoortige eentermen aangeduid in
 dezelfde kleur:
 
--   
+- Vb. 1:
 $$
 \orange{-3xy^2} + 5x^3 \orange{+ 9 xy^2}
 $$
-
--   
+- Vb. 2:
 $$
 \orange{-2qr} + p^2qr^3 \green{- 6p} \orange{+ 5qr} \green{+ 3 p}
 $$
-
--   
+- Vb. 3:
 $$
 \orange{\frac{4}{5}a^2b} \green{- 2b} + \frac{4}{5}a^2 \green{+ \frac{4}{5}b} \orange{- a^2b}
 $$
@@ -192,20 +188,26 @@ tellen** en het **lettergedeelte te laten staan**.
 
 We werken de voorbeelden van hierboven verder uit:
 
--   $\begin{aligned}
+- Vb. 1:
+$$
+\begin{aligned}
     \orange{-3xy^2} + 5x^3 \orange{+ 9 xy^2} &= \orange{(-3 + 9)xy^2} + 5x^3\\
      &= \orange{6xy^2} + 5x^3
-    \end{aligned}
+\end{aligned}
 $$
--   $\begin{aligned}
+- Vb. 2:
+$$
+\begin{aligned}
     \orange{-2qr} + p^2qr^3 \green{- 6p} \orange{+ 5qr} \green{+ 3 p} &= \orange{(-2 + 5)qr} + p^2qr^3 + \green{(-6 + 3)p}\\
      &= \orange{3qr} + p^2qr^3 \green{-3p}
-    \end{aligned}
+\end{aligned}
 $$
--   $\begin{aligned}
+- Vb. 3:
+$$
+\begin{aligned}
     \orange{\frac{4}{5}a^2b} \green{- 2b} + \frac{4}{5}a^2 \green{+ \frac{4}{5}b} \orange{- a^2b} &= \orange{(\frac{4}{5} - 1)a^2b} + \green{(-2+ \frac{4}{5})b} + \frac{4}{5}a^2\\
      &= \orange{-\frac{1}{5}a^2b} \green{-\frac{6}{5}b} + \frac{4}{5}a^2
-    \end{aligned}
+\end{aligned}
 $$
 
 We maken hier eigenlijk gebruik van de distributieve eigenschap in $\mathbb{R}$
@@ -214,15 +216,7 @@ $\mathbb{R}$.
 
 | Distributieve eigenschap | Gelijksoortige eentermen optellen  |
 | ------------------------ | ---------------------------------- |
-| 
-$$
-(2 + 3)a = 2a + 3a
-$$
-   | 
-$$
-2a + 3a = (2 + 3)a \gray{= 5a}
-$$
- |
+| $$ (2 + 3)a = 2a + 3a $$ | $$ 2a + 3a = (2 + 3)a \gray{= 5a} $$ |
 
 ## Termen rangschikken
 
@@ -242,17 +236,15 @@ $x^3$ vóór $y^3$.
 
 Enkele voorbeelden van het rangschikken volgens dalende graad van de eentermen:
 
--   
+- Vb. 1:
 $$
 -3\orange{x} + 2\orange{xy} + \orange{x^2y^3} - 5 \orange{x^2} = \orange{x^2y^3} - 5 \orange{x^2} + 2\orange{xy} - 3\orange{x}
 $$
-
--   
+- Vb. 2:
 $$
 -\frac{1}{3}\orange{a} + 5\orange{a^2} - 4 = 5\orange{a^2} -\frac{1}{3}\orange{a} - 4
 $$
-
--   
+- Vb. 3:
 $$
 5\orange{p^2q} + 3 \orange{p^5} - 2\orange{q^2} = 3\orange{p^5} + 5\orange{p^2q} - 2\orange{q^2}
 $$
@@ -262,13 +254,13 @@ We kunnen ook kiezen om enkel naar de graad van een bepaalde variabele te
 kijken. Zo zouden we de termen bijvoorbeeld kunnen rangschikken volgens dalende
 graad in $x$. Bijvoorbeeld:
 
--   Rangschikken volgens **dalende graad in $x$**:
+- Rangschikken volgens **dalende graad in $x$**:
     
 $$
 \orange{x}y^3 + \orange{x^3}y^4 - \orange{x^2}y = \orange{x^3}y^4 - \orange{x^2} y + \orange{x}y^3
 $$
 
--   Rangschikken volgens **dalende graad in $b$**:
+- Rangschikken volgens **dalende graad in $b$**:
     
 $$
 a\orange{b^2} - 4\orange{b^3} + a^4 = - 4\orange{b^3} + a\orange{b^2} + a^4
